<resources>
    <string name="app_name">list</string>
    <string name="item_default_recette">Recette manquant</string>
    <string name="item_default_note_value">Note obtenue manquante</string>
    <string name="item_default_nbNote">Nombre de avis manquant</string>
    <string name="item_default_pseudo">Pseudo manquant</string>
    <string name="item_default_note_given">Note donnée manquante</string>
    <string name="item_default_comment">Commentaire manquant</string>
    <string name="item_default_date">Date manquante</string>
    <string name="item_default_img">Image manquante</string>
</resources>