<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:layout_marginTop="150dp">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/widthImgText"
        android:layout_height="@dimen/heightImgText"
        android:elevation="30dp">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="275dp"
        android:layout_height="@dimen/heightImgText"
        android:elevation="30dp"
        app:cardBackgroundColor="@color/beige">

        <RelativeLayout
            android:layout_width="214dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:autoSizeTextType="uniform">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:autoSizeMaxTextSize="18dp"
                android:autoSizeMinTextSize="10dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_recette"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/item_note_value"
                android:layout_width="49dp"
                android:layout_height="15dp"
                android:layout_below="@id/item_title"
                android:autoSizeMaxTextSize="10dp"
                android:autoSizeMinTextSize="6dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_note_value" />

            <TextView
                android:id="@+id/item_nb_note"
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_below="@+id/item_title"
                android:layout_marginStart="4dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/item_note_value"
                android:autoSizeMaxTextSize="10dp"
                android:autoSizeMinTextSize="5dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_nbNote" />

            <TextView
                android:id="@+id/item_pseudo"
                android:layout_width="84dp"
                android:layout_height="15dp"
                android:layout_below="@+id/item_note_value"
                android:layout_marginTop="3dp"
                android:autoSizeMaxTextSize="15dp"
                android:autoSizeMinTextSize="6dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_pseudo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_note_given"
                android:layout_width="73dp"
                android:layout_height="15dp"
                android:layout_below="@+id/item_note_value"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/item_pseudo"
                android:autoSizeMaxTextSize="15dp"
                android:autoSizeMinTextSize="6dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_note_given" />

            <TextView
                android:id="@+id/item_comment"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_below="@id/item_note_given"
                android:layout_marginTop="4dp"
                android:autoSizeMaxTextSize="14dp"
                android:autoSizeMinTextSize="9dp"
                android:autoSizeStepGranularity="0.25dp"
                android:autoSizeTextType="uniform"
                android:text="@string/item_default_comment" />

            <TextView
                android:id="@+id/item_date_post"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="118dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
               android:textAlignment="textEnd"
                android:text="@string/item_default_date"
                android:textSize="9dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>